package NDoom;

message TPantherIndexInfo {
    optional float MinUnigramRelevance = 1;
    optional float MinBigramRelevance = 2;
    optional float MinUnigramDocs = 3;
    optional float RelevanceMultiplier = 4;
    optional float WordMaskWeight = 5;
    optional string SuperLemmerVersion = 6;
    optional string PantherVersion = 7;
    optional uint32 MaxKishkaLength = 8;
    optional bool SaveHasTextHits = 9;
    optional float StatWeightRatio = 10;
    optional float TextHistsRatio = 11;
    optional float HitsNorm = 12;
    optional float HostDiversityRatio = 13;
    optional uint32 DynMaxKishkaLengthLow = 14;
    optional uint32 DynMaxKishkaLengthHigh = 15;
    optional uint32 DynMaxKishkaLengthDiv = 16;
}

message TIndexInfo {
    required string Format = 1;
    optional string SvnVersion = 2;
    optional string HitModelType = 3;
    optional string KeyModelType = 4;

    optional TPantherIndexInfo PantherIndexInfo = 5;
}
